--- a/RestockList/View/Base.lproj/Main.storyboard
+++ b/RestockList/View/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Restock List-->
+        <!--消耗品リスト-->
         <scene sceneID="5iX-Yk-WKQ">
             <objects>
                 <tableViewController storyboardIdentifier="Main" id="mnu-J1-1eu" customClass="TableViewController" customModule="RestockList" customModuleProvider="target" sceneMemberID="viewController">
@@ -179,7 +179,7 @@
                             <outlet property="delegate" destination="mnu-J1-1eu" id="z96-nX-A8L"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Restock List" id="YFM-aQ-jwO">
+                    <navigationItem key="navigationItem" title="消耗品リスト" id="YFM-aQ-jwO">
                         <barButtonItem key="leftBarButtonItem" title="Item" image="line.3.horizontal" catalog="system" id="V00-Nx-ABL">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -1440,32 +1440,32 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ptk-K1-utD">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1089.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rFS-tx-ell">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="1089.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="テーマカラー解放" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0o-Pr-xHU">
-                                                        <rect key="frame" x="60" y="598" width="164" height="24"/>
+                                                        <rect key="frame" x="60" y="282.5" width="164" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" name="FontColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icons" translatesAutoresizingMaskIntoConstraints="NO" id="nMv-Mu-uYT">
-                                                        <rect key="frame" x="20" y="386" width="374" height="189"/>
+                                                        <rect key="frame" x="20" y="70.5" width="374" height="189"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="nMv-Mu-uYT" secondAttribute="height" multiplier="374:189" id="MqB-Zd-dBR"/>
                                                             <constraint firstAttribute="height" constant="189" id="xuK-DO-Rvc"/>
                                                         </constraints>
                                                     </imageView>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Themes" translatesAutoresizingMaskIntoConstraints="NO" id="mYf-gW-UYC">
-                                                        <rect key="frame" x="20" y="645" width="374" height="224"/>
+                                                        <rect key="frame" x="20" y="329.5" width="374" height="224"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="mYf-gW-UYC" secondAttribute="height" multiplier="187:112" id="1RY-JJ-GBc"/>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proプラン 300円/月" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h6A-JG-OP1">
-                                                        <rect key="frame" x="20" y="939" width="374" height="17"/>
+                                                        <rect key="frame" x="20" y="623.5" width="374" height="17"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="17" id="oFr-JJ-fXM"/>
                                                         </constraints>
@@ -1474,7 +1474,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7b-LR-RJZ">
-                                                        <rect key="frame" x="20" y="976" width="374" height="70"/>
+                                                        <rect key="frame" x="20" y="660.5" width="374" height="70"/>
                                                         <color key="backgroundColor" name="AccentColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="70" id="vdH-Vr-VLH"/>
@@ -1489,10 +1489,10 @@
                                                         </connections>
                                                     </button>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tRZ-L0-SCH">
-                                                        <rect key="frame" x="20" y="20" width="30" height="346"/>
+                                                        <rect key="frame" x="20" y="20" width="30" height="30.5"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bitmap.png" translatesAutoresizingMaskIntoConstraints="NO" id="nCa-UR-a70">
-                                                                <rect key="frame" x="8" y="8" width="14" height="330"/>
+                                                                <rect key="frame" x="8" y="8" width="14" height="14.5"/>
                                                             </imageView>
                                                         </subviews>
                                                         <color key="backgroundColor" name="AccentColor1"/>
@@ -1504,13 +1504,13 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイコン解放" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R6K-DM-Z8e">
-                                                        <rect key="frame" x="60" y="23" width="123" height="340"/>
+                                                        <rect key="frame" x="60" y="23" width="123" height="24.5"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" name="FontColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xdg-Xt-Ihn">
-                                                        <rect key="frame" x="20" y="595" width="30" height="30"/>
+                                                        <rect key="frame" x="20" y="279.5" width="30" height="30"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hammer.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="X0c-uT-t1S">
                                                                 <rect key="frame" x="5" y="3.5" width="20" height="22.5"/>
@@ -1525,7 +1525,7 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r0O-O9-uT8">
-                                                        <rect key="frame" x="20" y="889" width="30" height="30"/>
+                                                        <rect key="frame" x="20" y="573.5" width="30" height="30"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="zaf-C3-EAc">
                                                                 <rect key="frame" x="5" y="5.5" width="20" height="18.5"/>
@@ -1540,7 +1540,7 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイテム数：20個 → 無制限" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K0k-tH-1MW">
-                                                        <rect key="frame" x="60" y="892" width="257" height="24"/>
+                                                        <rect key="frame" x="60" y="576.5" width="257" height="24"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="257" id="caU-ya-0SS"/>
                                                         </constraints>
@@ -1662,7 +1662,7 @@
             <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor1">
-            <color red="0.082352941176470587" green="0.70980392156862748" blue="0.3843137254901961" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.082000002264976501" green="0.70999997854232788" blue="0.38400000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor2">
             <color red="0.0" green="0.45882352941176469" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1671,13 +1671,13 @@
             <color red="0.25882352941176473" green="0.27058823529411763" blue="0.6470588235294118" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor4">
-            <color red="0.77647058823529413" green="0.0" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.77600002288818359" green="0.0" blue="0.40000000596046448" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor5">
             <color red="0.86699998378753662" green="0.13699999451637268" blue="0.17299999296665192" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="AccentColor6">
-            <color red="0.85500001907348633" green="0.32199999690055847" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.85490196078431369" green="0.32156862745098042" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="BackgroundColor">
             <color red="0.94509803921568625" green="0.94509803921568625" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
